// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldGrid-sc-11od8ug-1 bBCooi"
  id="Group 1"
  rows={null}
>
  <h6
    className="Typography__TitleText-sc-19auepv-2 gymxyt Field__GroupTitle-sc-11od8ug-2 hDNWii"
    fontSize="1em"
    fontWeight={500}
    letterSpacing="0px"
  >
    This is the first group
  </h6>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 jaAXEt Field__FieldItem-sc-11od8ug-0 hMEZxk"
    id="Field 1"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 kWqyoM Field__FieldLabel-sc-11od8ug-3 beNKSV"
      fontSize="1em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0px"
    >
      Field 1
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 bGQNqt Field__FieldValue-sc-11od8ug-4 lnIMQZ"
      fontSize="1em"
      fontWeight={600}
      id={null}
      letterSpacing="0px"
    >
      Value Goes Here
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 jaAXEt Field__FieldItem-sc-11od8ug-0 hMEZxk"
    id="Field 2"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 kWqyoM Field__FieldLabel-sc-11od8ug-3 beNKSV"
      fontSize="1em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0px"
    >
      Field 2
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 bGQNqt Field__FieldValue-sc-11od8ug-4 lnIMQZ"
      fontSize="1em"
      fontWeight={600}
      id={null}
      letterSpacing="0px"
    >
      Value Goes Here
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 jaAXEt Field__FieldItem-sc-11od8ug-0 hMEZxk"
    id="Field 3"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 kWqyoM Field__FieldLabel-sc-11od8ug-3 beNKSV"
      fontSize="1em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0px"
    >
      Field 3
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 bGQNqt Field__FieldValue-sc-11od8ug-4 lnIMQZ"
      fontSize="1em"
      fontWeight={600}
      id={null}
      letterSpacing="0px"
    />
  </section>
</section>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldGrid-sc-11od8ug-1 bBCooi"
  id={null}
  rows={null}
>
  <h6
    className="Typography__TitleText-sc-19auepv-2 gymxyt Field__GroupTitle-sc-11od8ug-2 hDNWii"
    fontSize="1em"
    fontWeight={500}
    letterSpacing="0px"
  >
    Fields via Array
  </h6>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 jaAXEt Field__FieldItem-sc-11od8ug-0 hMEZxk"
    id="Field 1"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 kWqyoM Field__FieldLabel-sc-11od8ug-3 beNKSV"
      fontSize="1em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0px"
    >
      Field 1
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 bGQNqt Field__FieldValue-sc-11od8ug-4 lnIMQZ"
      fontSize="1em"
      fontWeight={600}
      id={null}
      letterSpacing="0px"
    >
      Value Goes Here
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 jaAXEt Field__FieldItem-sc-11od8ug-0 hMEZxk"
    id="Field 2"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 kWqyoM Field__FieldLabel-sc-11od8ug-3 beNKSV"
      fontSize="1em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0px"
    >
      Field 2
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 bGQNqt Field__FieldValue-sc-11od8ug-4 lnIMQZ"
      fontSize="1em"
      fontWeight={600}
      id={null}
      letterSpacing="0px"
    >
      Value Goes Here
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 jaAXEt Field__FieldItem-sc-11od8ug-0 hMEZxk"
    id="Field 3"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 kWqyoM Field__FieldLabel-sc-11od8ug-3 beNKSV"
      fontSize="1em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0px"
    >
      Field 3
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 bGQNqt Field__FieldValue-sc-11od8ug-4 lnIMQZ"
      fontSize="1em"
      fontWeight={600}
      id={null}
      letterSpacing="0px"
    >
      Value Goes Here
    </p>
  </section>
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldGrid-sc-11od8ug-1 bBCooi"
  id={null}
  rows={null}
>
  <h6
    className="Typography__TitleText-sc-19auepv-2 gymxyt Field__GroupTitle-sc-11od8ug-2 hDNWii"
    fontSize="1em"
    fontWeight={500}
    letterSpacing="0px"
  >
    Inline Fields (Default)
  </h6>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 jaAXEt Field__FieldItem-sc-11od8ug-0 hMEZxk"
    id="Field 1"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 kWqyoM Field__FieldLabel-sc-11od8ug-3 beNKSV"
      fontSize="1em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0px"
    >
      Field 1
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 bGQNqt Field__FieldValue-sc-11od8ug-4 lnIMQZ"
      fontSize="1em"
      fontWeight={600}
      id={null}
      letterSpacing="0px"
    >
      Value Goes Here
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 jaAXEt Field__FieldItem-sc-11od8ug-0 hMEZxk"
    id="Field 2"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 kWqyoM Field__FieldLabel-sc-11od8ug-3 beNKSV"
      fontSize="1em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0px"
    >
      Field 2
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 bGQNqt Field__FieldValue-sc-11od8ug-4 lnIMQZ"
      fontSize="1em"
      fontWeight={600}
      id={null}
      letterSpacing="0px"
    >
      Value Goes Here
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 jaAXEt Field__FieldItem-sc-11od8ug-0 hMEZxk"
    id="Field 3"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 kWqyoM Field__FieldLabel-sc-11od8ug-3 beNKSV"
      fontSize="1em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0px"
    >
      Field 3
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 bGQNqt Field__FieldValue-sc-11od8ug-4 lnIMQZ"
      fontSize="1em"
      fontWeight={600}
      id={null}
      letterSpacing="0px"
    >
      Value Goes Here
    </p>
  </section>
</section>
`;
